2012-01-25  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>

PR rtl-optimization/48308
	* combine.c (enum undo_kind): Add UNDO_LINKS.
	(struct undo): Add member l to other_contents and where.
	(do_SUBST_LINK): New.
	(SUBST_LINK): New.
	(try_combine): Handle LOG_LINKS for the dummy i1 case.
	(undo_all): Handle UNDO_LINKS.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@183512 138bc75d-0d04-0410-961f-82ee72b054a4